========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'master' branch.


2020-05-23

 - Fixed #182: Eliding an amount with total price raises TypeError.
 - Added options to filter accounts in "onecommodity" plugin: skip accounts with
   explicitly declared commodities, metadata of "onecommodity: FALSE" and added
   regular expression to specify the list of accounts to match (default: all).


2020-05-22

 - Migration of code repository to Github.


2020-05-02

 - Minor performance improvment by avoiding calling __iadd__ in a few places.
 - Fixed bug due to the removal of __version__ in apiclient:
   https://github.com/googleapis/google-api-python-client/commit/1d8ec6874e1c6081893de7cd7cbc86d1f6580320
 - Changes all imports from 'apiclient' to 'googleapiclient', which is now the
   recommended way.
 - Fixed some warnings.
 - Disabled expensive assertions in Inventory class and implemented a special
   case for adding to an empty inventory to avoid expensive aggregation. This
   can occur in aggregation loops and is unnecessarily expensive when adding a
   single, very large inventory.
 - Made balance check aggregation avoid an initial empty inventory object, and
   changed the balance check code to call the realization utility function
   compute_balance().


2020-04-11

 - Fixed #425: Tentative bug fix for crash on decref over null traceback. The
   Python API for this function may return some null values. Not taking any
   chances. This should fix this particular bug.


2020-03-28

  - Allow the "divert_expenses" plugin to override diversions on postings that
    aren't for expenses accounts. I needed this to account to a deposit to my
    kid's daycare, which is an asset account in his diverted ledger.


2020-03-22

  - Added docstrings on some import code (while installing a new importer; my
    stuff is sometimes poorly documented I'm afraid).


2020-02-23
