@@ -62,7 +62,7 @@ class TestContext(test_utils.TestCase):
                                                   search_filename, search_lineno)
 
         self.assertLines(textwrap.dedent("""
-        Hash:fa550e3e0c65107d658be07c9cf87356
+        Hash:a62bcf48b818459f06c6d7f9b78029b4
         Location: <string>:31
 
         ------------ Balances before transaction
